# clang-tidy-automotive

./: .gitignore  Dockerfile  LICENSE.TXT  NAMING-CONVENTION.md  README.md  build.sh  clang-format.sh  configure.sh  download.sh  setup.sh
src/automotive/: AutomotiveTidyCheck.h  AutomotiveTidyModule.cpp  AvoidAssignmentInExpressionCheck.cpp  AvoidAssignmentInExpressionCheck.h  AvoidFunctionParameterModificationCheck.cpp  AvoidFunctionParameterModificationCheck.h  AvoidNonBooleanInConditionCheck.cpp  AvoidNonBooleanInConditionCheck.h  AvoidUnionCheck.cpp  AvoidUnionCheck.h  CMakeLists.txt  ImplicitFunctionDeclCheck.cpp  ImplicitFunctionDeclCheck.h  ImplicitIntCheck.cpp  ImplicitIntCheck.h  InvariantControlCheck.cpp  InvariantControlCheck.h  MISRATidyModule.cpp  MissingCompoundCheck.cpp  MissingCompoundCheck.h  MissingElseCheck.h  MissingStaticInternalLinkageCheck.cpp  MissingStaticInternalLinkageCheck.h  TokenRange.h
src/automotive/array/: ArrayComponent.cpp  ArrayComponent.h  AvoidFlexibleArrayMemberCheck.cpp  AvoidFlexibleArrayMemberCheck.h  AvoidPartialArrayInitCheck.cpp  AvoidPartialArrayInitCheck.h  AvoidVariableLengthArrayCheck.cpp  AvoidVariableLengthArrayCheck.h  CMakeLists.txt  MissingExternalArraySizeCheck.h
src/automotive/bitfield/: AvoidBitfieldInUnionCheck.cpp  AvoidBitfieldInUnionCheck.h  AvoidSignedSingleBitFieldCheck.cpp  AvoidSignedSingleBitFieldCheck.h  BitfieldComponent.cpp  BitfieldComponent.h  CMakeLists.txt  WrongBitfieldTypeCheck.cpp  WrongBitfieldTypeCheck.h  compliance.json
src/automotive/char-sets-and-lexical-convs/: CMakeLists.txt  CharSetsAndLexicalConvsModule.cpp  CharSetsAndLexicalConvsModule.h  UnterminatedEscapeSequenceCheck.cpp
src/automotive/comment/: AvoidCommentWithinCommentCheck.cpp  AvoidCommentWithinCommentCheck.h  AvoidLinesplicingWithinCommentCheck.cpp  AvoidLinesplicingWithinCommentCheck.h  CMakeLists.txt  CommentComponent.cpp  CommentComponent.h  CommentMatch.h  compliance.json
src/automotive/declarations-and-definitions/: AvoidRestrictTypeCheck.cpp  AvoidRestrictTypeCheck.h  CMakeLists.txt  DeclarationsAndDefinitionsModule.cpp  DeclarationsAndDefinitionsModule.h  FunctionDeclarationMismatchCheck.h  MissingExternalArraySizeCheck.cpp  StaticInlineCheck.cpp  StaticInlineCheck.h  UncompleteFunctionPrototypeCheck.cpp  UncompleteFunctionPrototypeCheck.h
src/automotive/expression/: AvoidAssignmentInExpressionCheck.cpp  AvoidAssignmentInExpressionCheck.h  AvoidNonBooleanInConditionCheck.cpp  AvoidNonBooleanInConditionCheck.h  CMakeLists.txt  ExpressionComponent.cpp  ExpressionComponent.h  InvariantControlCheck.h
src/automotive/function/: AvoidFunctionParameterModificationCheck.cpp  AvoidFunctionParameterModificationCheck.h  CMakeLists.txt  FunctionComponent.cpp  FunctionComponent.h  FunctionDeclarationMismatchCheck.cpp  ImplicitFunctionDeclCheck.cpp  ImplicitFunctionDeclCheck.h  StaticInlineCheck.cpp
src/automotive/goto-stmt/: AvoidGotoCheck.h  CMakeLists.txt  GotoStmtComponent.cpp  GotoStmtComponent.h
src/automotive/literal/: AvoidLowercaseLiteralSuffixCheck.cpp  AvoidLowercaseLiteralSuffixCheck.h  AvoidOctalNumberCheck.cpp  AvoidOctalNumberCheck.h  CMakeLists.txt  LiteralComponent.cpp  LiteralComponent.h  UnterminatedEscapeSequenceCheck.cpp  UnterminatedEscapeSequenceCheck.h
src/automotive/operator/: AvoidCommaOperatorCheck.cpp  AvoidCommaOperatorCheck.h  CMakeLists.txt  OperatorComponent.cpp  OperatorComponent.h
src/automotive/pointer/: CMakeLists.txt  PointerComponent.cpp  PointerComponent.h  WrongNullPointerValueCheck.cpp  WrongNullPointerValueCheck.h
src/automotive/pointer-type-conversions/: AvoidAtomicVoidPointerCheck.cpp  AvoidAtomicVoidPointerCheck.h  CMakeLists.txt  PointerTypeConversionsModule.cpp  PointerTypeConversionsModule.h  WrongNullPointerValueCheck.cpp
src/automotive/preprocessor/: AvoidHashOperatorCheck.cpp  AvoidHashOperatorCheck.h  AvoidMacroNamedAsCkeywordCheck.cpp  AvoidMacroNamedAsCkeywordCheck.h  AvoidMultipleHashOperatorsCheck.cpp  AvoidMultipleHashOperatorsCheck.h  AvoidUndefCheck.cpp  AvoidUndefCheck.h  CMakeLists.txt  PreprocessorComponent.cpp  PreprocessorComponent.h  PreprocessorFlowCheck.cpp  PreprocessorFlowCheck.h  UnusedMacroCheck.cpp  UnusedMacroCheck.h
src/automotive/return/: CMakeLists.txt  MissingReturnValueHandlingCheck.h  ReturnComponent.cpp  ReturnComponent.h
src/automotive/return-stmt/: CMakeLists.txt  MissingReturnValueHandlingCheck.cpp  MissingReturnValueHandlingCheck.h  MultipleReturnStmtCheck.cpp  MultipleReturnStmtCheck.h  NoReturnVoidCheck.cpp  NoReturnVoidCheck.h  ReturnStmtComponent.cpp  ReturnStmtComponent.h
src/automotive/statement/: AvoidBooleanInSwitchCheck.cpp  AvoidGotoCheck.cpp  AvoidGotoCheck.h  CMakeLists.txt  ForwardGotoLabelCheck.cpp  ForwardGotoLabelCheck.h  MissingBreakInCaseStmtCheck.cpp  MissingBreakInCaseStmtCheck.h  MissingBreakInSwitchCheck.cpp  MissingCompoundCheck.cpp  (+19 more)
src/misra/: ASTMatchers.h  AbstractAvoidApiCheck.cpp  AbstractAvoidApiCheck.h  AbstractCheckApiHandler.h  AbstractLabelCheck.cpp  AbstractLabelCheck.h  AtoXCheck.cpp  AtoXCheck.h  AvoidApiCheck.cpp  AvoidApiCheck.h  AvoidApiHandler.h  AvoidApiPPCallbacks.cpp  AvoidApiPPCallbacks.h  AvoidAssignmentInExpressionCheck.cpp  AvoidAssignmentInExpressionCheck.h  AvoidAtomicVoidPointerCheck.cpp  AvoidAtomicVoidPointerCheck.h  AvoidBitfieldsInUnionsCheck.cpp  AvoidBitfieldsInUnionsCheck.h  AvoidBooleanInSwitchCheck.cpp  AvoidBooleanInSwitchCheck.h  AvoidCommaOperatorCheck.cpp  AvoidCommaOperatorCheck.h  AvoidCommentWithinCommentCheck.cpp  AvoidCommentWithinCommentCheck.cpp.save  AvoidCommentWithinCommentCheck.h  AvoidFlexibleArrayMemberCheck.cpp  AvoidFlexibleArrayMemberCheck.h  AvoidFunctionParameterModificationCheck.h  AvoidGotoCheck.cpp  AvoidGotoCheck.h  AvoidLinesplicingWithinCommentCheck.cpp  AvoidLinesplicingWithinCommentCheck.h  AvoidLowercaseLiteralSuffixCheck.cpp  AvoidLowercaseLiteralSuffixCheck.h  AvoidMacroNamedAsCkeywordCheck.cpp  AvoidMacroNamedAsCkeywordCheck.h  AvoidNonBooleanConditionCheck.cpp  AvoidNonBooleanConditionCheck.h  AvoidNonBooleanInConditionCheck.cpp  (+101 more)
(+229 files in other folders)
